--- a/localisation/ETH_Modifications_l_english.yml
+++ b/localisation/ETH_Modifications_l_english.yml
@@ -15,7 +15,7 @@
  ETH_fait_accompli_2:0 "Kebra Nagast"
  ETH_fait_accompli_2_desc:0 "The power of Rome has been eclipsed by the power of God. Ethiopia, and our close allies in Yohannia, stand triumphant!"
  
- ETH_TORS:0 "Treaty of Royal States"
+ ETH_TORS:0 "Treaty of K'enidi"
  ETH_TORS_desc:0 "A multinational allianmce is needed if we are to survive the modren world. Alone we are weak, but together we will be invincible!"
  ETH_amhara_modernization_initiative:0 "Amhara Modernization Initiative"
  ETH_amhara_modernization_initiative_desc:0 "We were too slow to effectively industrialize ourselves even after the First Italian invasion. We must forcibly industrialize our populace for our nation's benefit. It seems Yohannian investors are all too willing to help."
