--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -71,7 +71,8 @@
  PRJ_extremist_tactics_idea_desc:0 "Outnumbered, outgunned, but not out of spirit."
  PRJ_extremist_tactics_idea_2:0 "Fundamentalist Tactics"
  PRJ_extremist_tactics_idea_2_desc:0 "Once shattered strength is so fragile, break them before they break us"
- 
+ PRJ_fortress:0 "Fortress Yohannia"
+ PRJ_fortress_desc:0 "We may have bit off more than we can chew, but if we go down the body count we leave behind will be brutal."
  
  PRJ_afrikaans:0 "Dutch Afrikaan Migration"
  PRJ_french_expertise:0 "French Expertise"
@@ -443,10 +444,10 @@
  
  PRJ_syndicalism_flee:0 "The King Flees"
  PRJ_syndicalism_flee_desc:0 "The coward Roderiq has fled to Europe. He will be back at somepoint."
- PRJ_roderiq_flees:0 "Roderiq Flees to France"
+ PRJ_roderiq_flees:0 "Roderiq Flees to Britain"
  
  PRJ_syndicalism_3:0 "Consolidate Power"
- PRJ_syndicalism_3_desc:0 "The wokers have taken the country!Now is the time to restructure ourselves accordingly. Up with the People! Down with the Bourgeoisie elites!"
+ PRJ_syndicalism_3_desc:0 "The wokers have taken the country! Now is the time to restructure ourselves accordingly. Up with the People! Down with the Bourgeoisie elites!"
  
  PRJ_recognise_ussr:0 "Recognize the Soviet Union"
  PRJ_recognise_ussr_desc:0 "Old King Otto refused to recognize the Soviet Union and he denied the existance of the Workers State. This injustice shall not stand! We shall reach out to the Soviets and make overtures of friendship"
@@ -455,7 +456,7 @@
  PRJ_eye_britain_desc:0 "Roderiq may be gone... but captured classified documents made his ultimate target quite clear, the British African possessions. We shall procede with his old plans, but not for the glory of a king! No, for the benefit of the workers of the world!"
  
  PRJ_army_infiltration:0 "Infiltrate Raj troops"
- PRJ_army_infiltration:0 "It is too obvious based on skin tone alone that we cannot directly infiltrate British ranks. Instead we will burrow into her crown jewel, the Raj, and attack the monstrous empire from within."
+ PRJ_army_infiltration_desc:0 "It is too obvious based on skin tone alone that we cannot directly infiltrate British ranks. Instead we will burrow into her crown jewel, the Raj, and attack the monstrous empire from within."
  
  PRJ_naval_infiltration:0 "The British Navy"
  PRJ_naval_infiltration_desc:0 "With our operatives in many posts across the British Empire we will be able to discover much more about the movements of British Ships." 
