--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -39,12 +39,24 @@
  RULE_HISTORICAL_FMU_AI_DESC:0 "The Friestaat of Muu will flip fascist and join the Axis on the High Seas"
  RULE_FASCIST_ALTERNATE_FMU_AI_DESC:0 "The Friestaat of Muu will flip fascist and join the Axis and invade across the Muan Continent"
  #Prester John Rules
- RULE_OPTION_PRJ_HISTORICAL:0 "Abandon Ethiopia"
- RULE_OPTION_PRJ_HISTORICAL_AI_DESC:0 "Yohannia will abandon Ethiopia to the Italians"
+ RULE_OPTION_PRJ_HISTORICAL:0 "Historical"
+ RULE_OPTION_PRJ_HISTORICAL_AI_DESC:0 "Yohannia will bide her time and strike Britain at her most vunerable."
  RULE_OPTION_PRJ_INTERVENE:0 "Save Ethiopia"
  RULE_OPTION_PRJ_INTERVENE_AI_DESC:0 "Yohannia will save Ethiopia from the Italians and prevent further african incursions"
  RULE_OPTION_PRJ_PUPPET_ETHIOPIA:0 "Save Ethiopia Alternate"
  RULE_OPTION_PRJ_PUPPET_ETHIOPIA_AI_DESC:0 "Yohannia will save Ethiopia from the Italians and have Ethiopia submit to Yohannian interests"
+ RULE_OPTION_PRJ_DEMOCRACY:0 "Democracy
+ RULE_OPTION_PRJ_DEMOCRACY_AI_DESC:0 "Yohannia will try to turn Democratic by going down the required path. By force or willingly depends on Ethiopia"
+ RULE_OPTION_PRJ_ISLAM_THEOCRACY:0 "Islamic State"
+ RULE_OPTION_PRJ_ISLAM_THEOCRACY_AI_DESC:0 "The Arabs will revolt and try to establish a Jihadist state in Yohannia"
+ RULE_OPTION_PRJ_CHRISTIAN_THEOCRACY:0 "Christian Theocracy"
+ RULE_OPTION_PRJ_CHRISTIAN_THEOCRACY_AI_DESC:0 "The christian Plurality will revolt and try to establish the true stae of Prester John"
+ RULE_OPTION_PRJ_JEWISH_THEOCRACY:0 "A Jewish Home"
+ RULE_OPTION_PRJ_JEWISH_THEOCRACY_AI_DESC:0 "The Jews while outnumbered believe that with the situation In europe the must rise up and create a Jewish state in the south"
+ RULE_OPTION_PRJ_COMMUNISM:0 "Communism"
+ RULE_OPTION_PRJ_COMMUNISM_AI_DESC:0 "Yohannia will try to turn Communist by going down the required path"
+ 
+
  
  #HOUPO"E Rules
  HOU_AI_RANDOM_HISTORICAL:0 "Historical"
