--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -171,7 +171,7 @@
  STATE_1070:0 "Nouvelle Loire"
  STATE_1071:0 "South Lake"
  STATE_1072:0 "Hai'ie"
- STATE_1072:0 "West Virginia"
+ STATE_1072:0 "Hi'e"
  STATE_1073:0 "Yabishee"
  STATE_1074:0 "Reyshaba"
  STATE_1075:0 "Bahmelq"
