--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -447,7 +447,7 @@
  PRJ_roderiq_flees:0 "Roderiq Flees to Britain"
  
  PRJ_syndicalism_3:0 "Consolidate Power"
- PRJ_syndicalism_3_desc:0 "The wokers have taken the country! Now is the time to restructure ourselves accordingly. Up with the People! Down with the Bourgeoisie elites!"
+ PRJ_syndicalism_3_desc:0 "The workers have taken the country! Now is the time to restructure ourselves accordingly. Up with the People! Down with the Bourgeoisie elites!"
  
  PRJ_recognise_ussr:0 "Recognize the Soviet Union"
  PRJ_recognise_ussr_desc:0 "Old King Otto refused to recognize the Soviet Union and he denied the existance of the Workers State. This injustice shall not stand! We shall reach out to the Soviets and make overtures of friendship"
