--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -68,11 +68,11 @@
  MUU_fascism_party:0 "Mu Virinji Partizi"
  MUU_communism_party:0 "Munu Qomiunist Partizi"
  MUU_democratic_party:0 "Temoqrazi Partizi"
- MUU_neutrality_party:0 "Qenti Itale Partizi"
+ MUU_neutrality_party:0 "Ujjamunaz Partizi"
  MUU_islamism_party:0 "Yslam Partizi"
  MUU_monarchism_party:0 "Ujjamunaz Partizi"
  MUU_mandalism_party:0 "No Representation"
- FMU_neutrality_party:0 "Selbstverwaltung Partei"
+ FMU_neutrality_party:0 "Königspartei"
  FMU_fascism_party:0 "ZNSP"
  FMU_fascism_party_long:0 "Zentrale Nationalsozialistische Partei"
  FMU_democratic_party:0 "Liberale Koalition"
@@ -83,7 +83,7 @@
  FMU_islamism_party:0 "Deutschemu Islamrat"
  FMU_mandalism_party:0 "No Representation"
  FMU_monarchism_party:0 "Königspartei"
- ATL_neutrality_party:0 "Vakeaedleseranle Parti"
+ ATL_neutrality_party:0 "Guredda Parti"
  ATL_fascism_party:0 "Zarikgudal Parti"
  ATL_democratic_party:0 "Lestadentiral Parti"
  ATL_communism_party:0 "Kamunistal Parti"
@@ -97,7 +97,7 @@
  FRS_monarchism_party:0 "Konungslegrflokkr"
  FRS_mandalism_party:0 "No Representation"
  FRS_islamism_party:0 "No Representation"
- THU_neutrality_party:0 "Free Atlantic Party"
+ THU_neutrality_party:0 "Konungsflokkur"
  THU_democratic_party:0 "Fiskimannaflokkurinn"
  THU_communism_party:0 "TIP"
  THU_communism_party_long:0 "Thule International Party"
@@ -120,7 +120,7 @@
  KUM_islamism_party:0 "Kumari Islamic Party"
  KUM_mandalism_party:0 "National Mandala"
  KUM_monarchism_party:0 "Kumari Royalist Party"
- PRJ_neutrality_party:0 "Yohannian Prosperity Party"
+ PRJ_neutrality_party:0 "Hierosolimitanus Dynasty"
  PRJ_fascism_party:0 "Religious Parties of Yohannia"
  PRJ_democratic_party:0 "IDPY"
  PRJ_democratic_party_long:0 "Independent Democratic Parties of Yohannia"
