Fixed localization, potential graphics to use

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -283,7 +283,7 @@
  VICTORY_POINTS_15926:0 "Daly"
  VICTORY_POINTS_15967:0 "Pitiychola"
  VICTORY_POINTS_15977:0 "Tiwi"
- VICTORY_POINTS_14448:0 "Dansoist"
+ VICTORY_POINTS_14448:0 "Danspost"
  VICTORY_POINTS_15685:0 "Shahan"
  VICTORY_POINTS_15684:0 "Attupil"
  VICTORY_POINTS_14536:0 "Yirram"
