--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -80,8 +80,8 @@
  
  #foci
  
- PRJ_abandon_ethiopia:0 "League of Nations Summit"
- PRJ_abandon_ethiopia_desc:0 "The imperialist forces of a fallen Rome march on one of the last free African nations. While the LoN has decided not to help, should Emperor Selassie ask us directly we will be more than happy to assist."
+ PRJ_ethiopia_meeting:0 "Galdama Conference"
+ PRJ_ethiopia_meeting_desc:0 "The imperialist forces of a fallen Rome march on one of the last free African nations. While the LoN has decided not to help, should Emperor Selassie ask us directly we will be more than happy to assist."
  
  
  
