--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -42,6 +42,7 @@
  VICTORY_POINTS_16341:0 "Qeriu"
  VICTORY_POINTS_16512:0 "Horr"
  VICTORY_POINTS_16514:0 "Galdama"
+ VICTORY_POINTS_11830:0 "Providence"
  
  #Australia
  VICTORY_POINTS_8186:0 "Port Augusta"
