FLAG + TRS MtG Navy Fixed

--- a/localisation/HOU_l_english.yml
+++ b/localisation/HOU_l_english.yml
@@ -165,7 +165,7 @@
  HOU_bastion_of_the_revolution_desc:0 "Houpo'e must take her place in the world as a true bastion of Socialism. When we have sufficiently prepared the People for the great struggle to come, then we can turn our attention outward.
  HOU_puaa_molotov:0 "The Pua'a-Molotov Agreement"
  HOU_puaa_molotov_desc:0 "The future lies with the people, and that future needs a home of the Revolution in Europe. To counter the many threats this world has we will join with the Soviet Union to defeat tyranny and oppression everywhere."
- HOU_peoples_navy:0 "The People's Navy."
+ HOU_peoples_navy:0 "The People's Navy"
  HOU_peoples_navy_desc:0 "Threats to the Revolution are no longer limited to neighboring lands. We must prepare to establish the Revolution's control over the seas as well."
  HOU_kanagan_communism:0 "Kanagan Communism"
  HOU_kanagan_communism_desc:0 "Communism is very similar to many of our own cultural traditions. We must adapt both our traditions and the teachings of Communism to create something better for our people."
