--- a/localisation/replace/Greece_replace_l_english.yml
+++ b/localisation/replace/Greece_replace_l_english.yml
@@ -22,12 +22,12 @@
  STATE_459:0 "Kasera"
 
  # Tag names
- GRE_fascism:0 "Rhoman Empire"
- GRE_fascism_DEF:0 "The Rhoman Empire"
- GRE_democratic:0 "Rhoman Republic"
- GRE_democratic_DEF:0 "The Rhoman Republic"
- GRE_neutrality:0 "Rhoman Empire"
- GRE_neutrality_DEF:0 "The Rhoman Empire"
+ GRE_fascism:0 "Rhomaion Empire"
+ GRE_fascism_DEF:0 "The Rhomaion Empire"
+ GRE_democratic:0 "Rhomaion Republic"
+ GRE_democratic_DEF:0 "The Rhomaion  Republic"
+ GRE_neutrality:0 "Rhomaion Empire"
+ GRE_neutrality_DEF:0 "The Rhomaion  Empire"
  GRE_communism:0 "Aegean Soviet Federal Socialist Republic"
  GRE_communism_DEF:0 "The Aegean Soviet Federal Socialist Republic"
  GRE_fascism_ADJ:0 "Rhōmaîoi"
