--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -43,6 +43,33 @@
  VICTORY_POINTS_16512:0 "Horr"
  VICTORY_POINTS_16514:0 "Galdama"
  VICTORY_POINTS_11830:0 "Providence"
+ #Balkin ANatolia
+  # Victory Points
+ VICTORY_POINTS_11747:0 "Ancyra"
+ VICTORY_POINTS_9833:0 "Constantinople"
+ VICTORY_POINTS_940:0 "Amorion"
+ VICTORY_POINTS_914:0 "Argyrocastron"
+ VICTORY_POINTS_947:0 "Kyzikos"
+ VICTORY_POINTS_4112:0 "Smyrna"
+ #VICTORY_POINTS_9893:0 "Melitene"
+ VICTORY_POINTS_9893:0 "Telouch"
+ VICTORY_POINTS_9932:0 "Trapezus"
+ VICTORY_POINTS_890:0 "Nicaea"
+ VICTORY_POINTS_1005:0 "Attaleia"
+ VICTORY_POINTS_10007:0 "Rhodos"
+ VICTORY_POINTS_11746:0 "Tarsos"
+ VICTORY_POINTS_3882:0 "Skoupoi"
+ VICTORY_POINTS_11954:0 "Hesperis"
+ VICTORY_POINTS_1141:0 "Ostarburg"
+ VICTORY_POINTS_4018:0 "Gronenburg"
+ VICTORY_POINTS_1145:0 "Kasera"
+ VICTORY_POINTS_11842:0 "Adrianople"
+ VICTORY_POINTS_11984:0 "Nicosia"
+ VICTORY_POINTS_4124:0 "Seleucea"
+ VICTORY_POINTS_9868:0 "Sebastea"
+ VICTORY_POINTS_6945:0 "Chonai"
+ VICTORY_POINTS_4512:0 "Samosata"
+ VICTORY_POINTS_12029:0 "Antioch"
  
  #Australia
  VICTORY_POINTS_8186:0 "Port Augusta"
