--- a/localisation/PON_l_english.yml
+++ b/localisation/PON_l_english.yml
@@ -1,10 +1,12 @@
 ﻿l_english:
  #characters
+ GRE_Konstantinos_XIV_Komnenos:0 "Konstantinos XIV Komnenos"
  #political leaders
  PON_conservatism_leader:0 "Ancius Akropolites"
  PON_stalinism_leader:0 "Theophilus Kurkuas"
  PON_generic_fascism_leader:0 "Vanadour Ashjian"
  PON_prince_leader:0 "Mercurius Vatatzes"
+ PON_ioannis_metaxas:0 "Ioannis Metaxis"
  #Metaxis for Neutral
  #military leaders
  PON_corps_commander_1:0 "Aris Dimidis"
