--- a/localisation/replace/Greece_replace_l_english.yml
+++ b/localisation/replace/Greece_replace_l_english.yml
@@ -6,10 +6,10 @@
  GRE_fascism_DEF:0 "The Rhomaion Empire"
  GRE_democratic:0 "Rhomaion Republic"
  GRE_democratic_DEF:0 "The Rhomaion  Republic"
- GRE_neutrality:0 "Rhomaion Empire"
- GRE_neutrality_DEF:0 "The Rhomaion  Empire"
- GRE_communism:0 "Aegean Soviet Federal Socialist Republic"
- GRE_communism_DEF:0 "The Aegean Soviet Federal Socialist Republic"
+ GRE_neutrality:0 "Basileia ton Rhomaion"
+ GRE_neutrality_DEF:0 "The Basileia ton Rhomaion"
+ GRE_communism:0 "Aegean Federal Socialist Republic"
+ GRE_communism_DEF:0 "The Aegean Federal Socialist Republic"
  GRE_fascism_ADJ:0 "Rhōmaîoi"
  GRE_democratic_ADJ:0 "Rhōmaîoi"
  GRE_neutrality_ADJ:0 "Rhōmaîoi"
@@ -22,29 +22,12 @@
  PON_democratic_DEF:0 "The Pontus Republic"
  PON_neutrality:0 "Pontus Republic"
  PON_neutrality_DEF:0 "The Pontus Republic"
- PON_communism:0 "Pontic Soviet Federal Socialist Republic"
- PON_communism_DEF:0 "The Pontic Soviet Federal Socialist Republic"
+ PON_communism:0 "Pontic Soviet Socialist Republic"
+ PON_communism_DEF:0 "The Pontic Soviet Socialist Republic"
  PON_fascism_ADJ:0 "Pontus"
  PON_democratic_ADJ:0 "Pontus"
  PON_neutrality_ADJ:0 "Pontus"
  PON_communism_ADJ:0 "Pontus"
-
- # Cosmetic tags
- GRE_f:0 "Empire of the Cross"
- GRE_f_DEF:0 "The Empire of the Cross"
- GRE_f_ADJ:0 " Rhōmaîoi"
- 
- GRE_c:0 "Aegean Soviet Federal Socialist Republic"
- GRE_c_DEF:0 "The Aegean Soviet Federal Socialist Republic"
- GRE_c_ADJ:0 "Aegean"
- 
- GRE_d:0 "Rhoman Republic"
- GRE_d_DEF:0 "The Rhoman Republic"
- GRE_d_ADJ:0 " Rhōmaîoi"
- 
- GRE_s:0 "Rhomania"
- GRE_s_DEF:0 "Rhomania"
- GRE_s_ADJ:0 " Rhōmaîoi"
  
  # Special cosmetic tag
  GRE_sl:0 "Senate Loyalists"
@@ -112,18 +95,3 @@
  ITA_DEF:0 "Italy"
  ITA_ADJ:0 "Italian"
  
- # Removed focus entirely
- #ROM_secure_the_bosporus:0 "Secure the Bosporus"
- #ROM_secure_the_bosporus_desc:0 "Our naval access is, for now, limited to the Black Sea. Turkey, straddling the Bosporus Strait, could block our access to the mediterranean in the case of war, and so we must ensure free passage for when we have need of it."
- 
- # Removed German autonomy names, for Themes ('Reichskommissariat' as autonomy level wouldn't make sense if the territory was called 'Theme of X')
- autonomy_reichskommissariat:0 "Commissariat"
- autonomy_reichsprotectorate:0 "Protectorate"
- #autonomy_satellite:0 "Satellite"
-  
- # Bookmarks
- #GATHERING_STORM_NAME:0 "Gathering Storm"
- #GATHERING_STORM_DESC:0 "Dark times are coming. In Europe, Hitler has consolidated his power and his attention is now increasingly drawn beyond Germany's borders. Mussolini's Italy continues to embark on daring military adventures, much to the disdain of the Emperor in Rhomania, while the Empire of Japan stands poised to invade China in Asia. Almost twenty years have passed since the end of the Great War, and the world has once again been doused in gasoline. A single spark may be all it takes."
- ITA_GATHERING_STORM_DESC:0 "With the rise of Fascism, Italy has entered a new glorious era. Its armies are currently in the process of adding Ethiopia to the growing Italian colonial empire, but Mussolini's ambitions do not stop there.\n\nBetween Italy and Rhomania, dominion over the Mediterranean has long been a fiercely contested goal, and Europe appears to be entering a brave new world - one it may not be ready for. When the inevitable tidal wave of change arrives, Italy must find a place at its crest, lest it be swept away by imperial Rhomania to the east."
- CZE_GATHERING_STORM_DESC:0 "During the Great War, Czech troops fought alongside the Entente forces all over Europe in an effort to secure recognition for their nation. Their efforts were successful and Czechoslovakia rose from the ashes of the Austro-Hungarian Empire. \n\nSince their explosive entry into statehood Czechoslovakia formed the 'Little Entente' alliance with Yugoslavia and Wallachia with the aim of suppressing Hungary's efforts to restore the Austro-Hungarian Empire, although as resurgent German power grows the political landscape of Europe is rapidly changing."
-
