--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -51,6 +51,15 @@
  SOK_SWE_autonomy_puppet_DEF:0 "the Province of Södrakors"
  SOK_SWE_autonomy_integrated_puppet_DEF:0 "Swedish Södrakors"
  
+ PON_ATL_autonomy_dominion:0 "Pontian Mandate"
+ PON_ATL_autonomy_colony:0 "Roméika Amfarixenwiyun" #Where the name is relevent
+ PON_ATL_autonomy_puppet:0 "Roméikaseran" #Where the name is relevent
+ PON_ATL_autonomy_integrated_puppet:0 "Atlantean Anatolia"
+ PON_ATL_autonomy_dominion_DEF:0 "the Pontian Mandate"
+ PON_ATL_autonomy_colony_DEF:0 "the Roméika Amfarixenwiyun" #Where the name is relevent
+ PON_ATL_autonomy_puppet_DEF:0 "the Roméikaseran" #Where the name is relevent
+ PON_ATL_autonomy_integrated_puppet_DEF:0 "Atlantean Anatolia"
+ 
  #African Puppets
  PRJ_COG_puppet_subject:0 "Kingdom of Zaire"
  PRJ_COG_puppet_subject_DEF:0 "the Kingdom of Zaire"
