--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
  ATL_Avaskanta_Carras:0 "Avaskanta Carras"
+ ATL_Brodsom_Wegxaral: "Brodsom Wegxaral"
+ ATL_Rexet_Nalingrat: "Rexet Nalingrat"
+ ATL_Tunnaton_Zhvin: "Tunnataon Žvin"
  ATL_main:0 "Religious Societies"
  ATL_main_desc:0 "For centuries the influence of religion has been felt in Atlantis. To begin the necessary reforms in our society we must control and direct which societies come out on top; be they religious, criminal, or otherwise. Our nation must be united!"
  ATL_gostudi:0 "Gostudi Radicals"
