Half of Avahya Done

--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -2,8 +2,8 @@
  AVA_conservatism_leader:0 "Nikrad Umrigar"
  AVA_marxism_leader:0 "Arashk Manina"
  AVA_shah_leader:0 "Shah Parviz Saher"
- AVA_generic_fascism_leader:0 "Aurashaspa Betab"
- AVA_oligarchism_leader:0 "Bahrom Yazdavandi"
+ AVA_generic_fascism_leader:0 "Shah Roya Saher"
+ AVA_oligarchism_leader:0 "Conflicting Reports"
 #military leaders
  AVA_corps_commander_1:0 "Payam Chakkar"
 
