--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -43,8 +43,8 @@
  VICTORY_POINTS_16512:0 "Horr"
  VICTORY_POINTS_16514:0 "Galdama"
  VICTORY_POINTS_11830:0 "Providence"
- #Balkin ANatolia
-  # Victory Points
+ #Balkanized Anatolia
+ # Victory Points
  VICTORY_POINTS_11747:0 "Ancyra"
  VICTORY_POINTS_9833:0 "Constantinople"
  VICTORY_POINTS_940:0 "Amorion"
@@ -74,6 +74,10 @@
  VICTORY_POINTS_8186:0 "Port Augusta"
  VICTORY_POINTS_10927:0 "Andamooka"
  VICTORY_POINTS_1077:0 "Broken Hill"
+ 
+ #South America
+ VICTORY_POINTS_16515:0 "Manoa"
+ 
  #Elysia+Antarctica
  VICTORY_POINTS_14206:0 "Völkdenz"
  VICTORY_POINTS_14125:0 "Winternacht"
