hapid Emergancy fix for little borea

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -8,10 +8,10 @@
  VICTORY_POINTS_1744:0 "Pripolyarnyy"
  VICTORY_POINTS_10620:0 "Nitmazeryn"
  VICTORY_POINTS_10635:0 "Ugrunad"
- VICTORY_POINTS_10564:0 "Maltengorod"
+ VICTORY_POINTS_10564:0 "Maltengorod" #hyperborea
  VICTORY_POINTS_1704:0 "Illim"
- VICTORY_POINTS_7685:0 "Nerazapad"
- VICTORY_POINTS_4730:0 "Ginamtdinsk"
+ VICTORY_POINTS_7685:0 "Nerazapad" #hyperborea
+ VICTORY_POINTS_4730:0 "Ginamtdinsk" #hyperborea
  VICTORY_POINTS_9786:0 "Wilmington"
  VICTORY_POINTS_10859:0 "Wakanda"
  VICTORY_POINTS_12929:0 "Fragneilo"
@@ -29,10 +29,10 @@
  VICTORY_POINTS_16390:0 "Tungul"
  VICTORY_POINTS_16384:0 "Ptolmey"
  VICTORY_POINTS_5060:0 "Vrokima"
- VICTORY_POINTS_2972:0 "Aqyar"
- VICTORY_POINTS_2900:0 "Fryannovsk"
- VICTORY_POINTS_4859:0 "Kutur-Ogly"
- VICTORY_POINTS_2923:0 "Chernogorsk"
+ VICTORY_POINTS_2972:0 "Aqyar" #Tartaria
+ VICTORY_POINTS_2900:0 "Fryannovsk" #Tartaria
+ VICTORY_POINTS_4859:0 "Kutur-Ogly" #Tartaria
+ VICTORY_POINTS_2923:0 "Chernogorsk" #Tartaria
  VICTORY_POINTS_16509:0 "Dol Qinamba"
  VICTORY_POINTS_16510:0 "Jeputyi"
  VICTORY_POINTS_11145:0 "Guru"
