Bigger Longer Uncut Avahya 2

--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -129,3 +129,6 @@
  STRATEGICREGION_381:0 "Eastern Malihini"
  STRATEGICREGION_382:0 "Gem Coast"
  STRATEGICREGION_383:0 "Eastern Kumari"
+ STRATEGICREGION_384:0 "Where Are you"
+ STRATEGICREGION_385:0 "Avahyan Volcanic Chain"
+ STRATEGICREGION_386:0 "Avahyan Home Chain"
