--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -118,9 +118,12 @@
  VICTORY_POINTS_13938:0 "Gukiste"
  VICTORY_POINTS_13929:0 "Genagedexat"
  #Avaya
- VICTORY_POINTS_16407:0 "New Ishdagahl"
+ VICTORY_POINTS_16409:0 "New Ishdagahl"
  VICTORY_POINTS_16417:0 "Sumephon"
  VICTORY_POINTS_16413:0 "Zacha"
+ VICTORY_POINTS_16536:0 "name"
+ VICTORY_POINTS_16546:0 "name"
+ VICTORY_POINTS_16525:0 "name"
 #Mu
  VICTORY_POINTS_14748:0 "Vaalelemalolo"
  VICTORY_POINTS_14745:0 "Kororareka"
