Western Lemuria Pop Rebal and TOkyo Avahya

--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -347,8 +347,8 @@
  STATE_1245:0 "Tlaqua"
  STATE_1246:0 "Kingdom of Saguenay"
  STATE_1247:0 "Salah al-Din"
- STATE_1248:0 "Where are you"
- STATE_1249:0 "Name"
- STATE_1250:0 "Name"
- STATE_1251:0 "Name"
- STATE_1252:0 "Name"
+ STATE_1248:0 "Inka Name"
+ STATE_1249:0 "Avahya Name"
+ STATE_1250:0 "Avahya Name"
+ STATE_1251:0 "Avahya Name"
+ STATE_1252:0 "Avahya Name"
