--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -248,7 +248,7 @@
  STATE_1146:0 "Wrangel Island"
  STATE_1147:0 "Girgu"
  STATE_1148:0 "Hogland Archipelago"
- STATE_1149:0 "Avahya Archipelago"
+ STATE_1149:0 "Avahya"
  STATE_1150:0 "Panghuzitz Island"
  STATE_1151:0 "Schuyler Islands"
  STATE_1152:0 "New Svealand"
@@ -348,7 +348,7 @@
  STATE_1246:0 "Kingdom of Saguenay"
  STATE_1247:0 "Salah al-Din"
  STATE_1248:0 "Inka Name"
- STATE_1249:0 "Avahya Name"
- STATE_1250:0 "Avahya Name"
- STATE_1251:0 "Avahya Name"
- STATE_1252:0 "Avahya Name"
+ STATE_1249:0 "Muru"
+ STATE_1250:0 "Namruj"
+ STATE_1251:0 "Parez"
+ STATE_1252:0 "Veman"
