--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -408,6 +408,8 @@
  FMU_maywerken:1 "Maywerken"
  FMU_aggressive_strikes1:1 "name"
  name:1 "Aggressive Strikes"
+ 
+#Idea
  FMU_germans_are_super_bros1:1 "Germanic Brotherhood"
  FMU_germans_are_super_bros2:1 "Germanic Brotherhood"
  FMU_germans_are_super_bros3:1 "Germanic Brotherhood"
@@ -433,6 +435,15 @@
  FMU_white_immigration_laws:1 "White Immigration Laws"
  FMU_ache_of_war:1 "The Ache of War"
  FMU_pay_back_debt_to_the_ifc_category:0 "Paying the last of the reparations."
+ FMU_debt_to_the_ifc:0 "Debt to the I.F.C."
+ FMU_debt_to_the_ifc_desc:0 "Freistaaten is heavily indebted to the International Financial Commission, a once influential organization now chaired only by the United Kingdom, France, and Italy. Despite the bloated state of the I.F.C., the countries attached still desire their debts from Freistaaten to be paid in full - meaning that until we've paid our debts, or escaped them some other way, the I.F.C. has us by the purse strings."
+ FMU_debt_to_the_ifc_2:0 "Debt to the I.F.C."
+ FMU_debt_to_the_ifc_2_desc:0 "Freistaaten is heavily indebted to the International Financial Commission, a once influential organization now chaired only by the United Kingdom, France, and Italy. Despite the bloated state of the I.F.C., the countries attached still desire their debts from Freistaaten to be paid in full - meaning that until we've paid our debts, or escaped them some other way, the I.F.C. has us by the purse strings."
+ FMU_debt_to_the_ifc_3:0 "Debt to the I.F.C."
+ FMU_debt_to_the_ifc_3_desc:0 "Freistaaten is heavily indebted to the International Financial Commission, a once influential organization now chaired only by the United Kingdom, France, and Italy. Despite the bloated state of the I.F.C., the countries attached still desire their debts from Freistaaten to be paid in full - meaning that until we've paid our debts, or escaped them some other way, the I.F.C. has us by the purse strings."
+
+ 
+#Event
  fmu.1.t:0 "Integrate Manu"
  fmu.1.d:0 "At long last the time to fully bury the damned Treaty of Versailles has come! Freistaaten von Mu has reached out to us with a proposal that, if we accept, will bring prosperity and safety to our people. Let us put the evils of the past behind and march forward into a glorious future together!"
  fmu.1.a:0 "Accept the proposal"
@@ -476,9 +487,6 @@
  fmu.12.t:0 "Vogelinsel Accepts Annexation"
  fmu.12.d:0 "The collection of Muan Germans grows daily! Now our close neighbors in Vogelinsel are no longer well known neighbors but brothers in our growing and mighty nation."
  fmu.12.a:0 "Ausgezeichnet!"
- 
- 
- 
  fmu.24.t:0 "The Pan German Union"
  fmu.24.d:0 "Freistaaten von Mu has approached us with a proposal; to join in a Pan-German Union which will once again bring us closer to the Fatherland and will bind us together as one German people."
  fmu.24.a:0 "We shall join them!"
