--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -410,6 +410,10 @@
  name:1 "Aggressive Strikes"
  
 #Idea
+ FMU_lose_but_never_defeat: "Lose, but Never Defeat"
+ FMU_lose_but_never_defeat_desc: "The Great War and the Treaty of Versailles have broke us financially, and we have withdrawn from the war, but not because of our will to fight. The United States has accepted our armistice. Despite our success in Kahane Campaign, as a compromise for the British Empire, it saddled us with 'war reparations' for some years. The Treaty of Versailles, dismatling our heavy industry, limiting our cooperation with Germany, hobbling our armed forces, and setting up Manu as a free-trade zone."
+ FMU_lessons_of_the_great_war: "Lessons of The Great War"
+ 
  FMU_germans_are_super_bros1:1 "Germanic Brotherhood"
  FMU_germans_are_super_bros2:1 "Germanic Brotherhood"
  FMU_germans_are_super_bros3:1 "Germanic Brotherhood"
