--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -410,9 +410,20 @@
  name:1 "Aggressive Strikes"
  
 #Idea
- FMU_lose_but_never_defeat: "Lose, but Never Defeat"
- FMU_lose_but_never_defeat_desc: "The Great War and the Treaty of Versailles have broke us financially, and we have withdrawn from the war, but not because of our will to fight. The United States has accepted our armistice. Despite our success in Kahane Campaign, as a compromise for the British Empire, it saddled us with 'war reparations' for some years. The Treaty of Versailles, dismatling our heavy industry, limiting our cooperation with Germany, hobbling our armed forces, and setting up Manu as a free-trade zone."
- FMU_lessons_of_the_great_war: "Lessons of The Great War"
+ FMU_lose_but_never_defeat: "Lose but Never Defeat"
+ FMU_lose_but_never_defeat_desc: "The prolonged Great War has broken us financially, and we must withdrawn from the war, but not because of our will to fight. \n\nThe United States accepted and arranged our armistice while they were enraged by the 'Zimmermann Telegram'. Despite our success in Kahane Campaign, as a compromise for an offical British withdrawn from the war, it saddled us with 'war reparations' for some years. \n\nThe Treaty of Versailles, limiting our arms industry, hobbling our armed forces, and setting up Manu as a free-trade zone."
+ FMU_lessons_of_the_dresden: "Lessons of Dresden"
+ FMU_lessons_of_the_dresden_desc: "In mid-1916, British forces, which included Australian, New Zealand, and Lemurian, managed to invade Dresen as known as the "Kahane Campaign". \n\nTrench warfare began after the ANZLAC advanced inland over 30 miles with heavy casualties on their side. With the cost of the total devastation of this bustling port city. \n\nWe will not let it happen again."
+ FMU_austral_jaguar: "Austral's Jaguar"
+ FMU_austral_jaguar_desc: "The Royal Navy were unable to achieve a decisive victory during the Kahane Campaign. Our navy fought heroically in these world-recognized engagements. \n\nOur ships sank, the tradition passed down from one generation to the next."
+ FMU_secret_rearmament_1: "'Secret' Rearmament'"
+ FMU_secret_rearmament_1_desc: ""
+ FMU_secret_rearmament_2: "'Secret' Rearmament'"
+ FMU_secret_rearmament_2_desc: "" 
+ FMU_secret_rearmament_3: "'Secret' Rearmament'"
+ FMU_secret_rearmament_3_desc: ""
+ FMU_secret_rearmament_4: "'Secret' Rearmament'"
+ FMU_secret_rearmament_4_desc: ""
  
  FMU_germans_are_super_bros1:1 "Germanic Brotherhood"
  FMU_germans_are_super_bros2:1 "Germanic Brotherhood"
