--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -415,7 +415,7 @@
  FMU_lessons_of_the_dresden: "Lessons of Dresden"
  FMU_lessons_of_the_dresden_desc: "In mid-1916, British forces, which included Australian, New Zealand, and Lemurian, managed to invade Dresen as known as the "Kahane Campaign". \n\nTrench warfare began after the ANZLAC advanced inland over 30 miles with heavy casualties on their side. With the cost of the total devastation of this bustling port city. \n\nWe will not let it happen again."
  FMU_austral_jaguar: "Austral's Jaguar"
- FMU_austral_jaguar_desc: "The Royal Navy were unable to achieve a decisive victory during the Kahane Campaign. Our navy fought heroically in these world-recognized engagements. \n\nOur ships sank, the tradition passed down from one generation to the next."
+ FMU_austral_jaguar_desc: "The Royal Navy were unable to achieve a decisive victory during the Kahane Campaign. Our navy fought heroically in these world-recognized engagements. \n\nOur ships sank, yet tradition passed down from one generation to the next."
  FMU_secret_rearmament_1: "'Secret' Rearmament'"
  FMU_secret_rearmament_1_desc: ""
  FMU_secret_rearmament_2: "'Secret' Rearmament'"
