--- a/localisation/aml_opinion_modifiers_l_english.yml
+++ b/localisation/aml_opinion_modifiers_l_english.yml
@@ -14,6 +14,7 @@
  FMU_communist_reachout:0 "Communist Outreach"
  FMU_angry_communist:0 "Poor Communist Relations"
  FMU_charmed:0 "Charm Offensive"
+ FMU_revanchism: "Widespread Revanchism"
  PRJ_hatred:0 "Yohannian Hatred"
  PRJ_tolerated:0 "Yohannian Tolerance"
  HOU_insult_SOV:0 "Houpo'ean-Soviet Insults"
