--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -416,11 +416,11 @@
  FMU_lessons_of_the_dresden_desc: "In mid-1916, British forces, which included Australian, New Zealand, and Lemurian, managed to invade Dresen as known as the "Kahane Campaign".\n\nTrench warfare began after the ANZLAC advanced inland over 30 miles with heavy casualties on their side. With the cost of the total devastation of this bustling port city. \n\nWe will not let it happen again."
  FMU_austral_jaguar: "Austral's Jaguar"
  FMU_austral_jaguar_desc: "The Royal Navy were unable to achieve a decisive victory during the Kahane Campaign. Our navy fought heroically in these world-recognized engagements.\n\nOur ships sank, yet tradition passed down from one generation to the next."
- FMU_british_coercion: "Decennial Coercion"
- FMU_british_coercion_desc: "British preventing us to restablish diplomatic ties and bilateral trade with our German brothers in the last decade. They did their very best to prevent it, but they could not stop us now."
- FMU_british_coercion_tt: "§RPeople of the Friestaaten remember what the British Government did to us.§!"
- FMU_british_coercion_selection: "Decennial Coercion"
- FMU_british_coercion_selection_desc: "British preventing us to restablish diplomatic ties and bilateral trade with our German brothers in the last decade. They did their very best to prevent it, but they could not stop us now."
+ FMU_versailles_coercion: "Decennial Coercion"
+ FMU_versailles_coercion_desc: "The treaty preventing us to restablish diplomatic ties and bilateral trade with our German brothers. The British and the French did their very best in the last decade, but they could not stop us now."
+ FMU_versailles_coercion_tt: "§RPeople of the Friestaaten remember what the Treaty of Versailles did to us.§!"
+ FMU_versailles_coercion_selection: "Decennial Coercion"
+ FMU_versailles_coercion_selection_desc: "The treaty preventing us to restablish diplomatic ties and bilateral trade with our German brothers. The British and the French did their very best in the last decade, but they could not stop us now."
  FMU_secret_rearmament_1: "'Secret' Rearmament'"
  FMU_secret_rearmament_1_desc: ""
  FMU_secret_rearmament_2: "'Secret' Rearmament'"
