"Thunder is sounding, artillery pounding."
ATL - Tooltips fixed
FMU - War goals bypasses fixed

--- a/localisation/aml_opinion_modifiers_l_english.yml
+++ b/localisation/aml_opinion_modifiers_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ ATL_legalise_cannibalism: "§RCannibalism Legalised§!"
  MUU_republicanism:0 "Muror Republicanism"
  MUU_sucks_up:0 "Muror Diplomatic Outreach"
  TOD_republicanism:0 "Todorovian Republicanism"
