--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -196,19 +196,22 @@
  ATL_SP_neutrality_DEF:0 "Empire of Atlantis"
  
  #######tooltips
- ATL_attack_itorkanak_tooltip:0 "§gStarts the event chain to destroy the Itorkanak \n§"
- ATL_attack_kaprastiak_tooltip:0 "§gStarts the event chain to destroy the Kaprastiak \n§"
- ATL_attack_all_tooltip:0 "§gWe are going to fight both criminal organizations \n§"
- ATL_kapra_buddies:0 "§gEnds the Kaprastiak Hostilities \n§"
- ATL_itork_buddies:0 "§gEnds the Itorkanak Hostilities \n§"
- ATL_naitastarak_tooltip:0 "§gAllows decisions to suppress dissident thought \n§"
- ATL_panatlantean_railroad:0 "§gAdd maximum infrastructure in all mainland states \n§"
- ATL_air_reforms:0 "§gAllows decisions to remove the §yOutdated Air Force§  modifier \n§"
- ATL_forts:0 "§gAdds 3 forts and 3 coastal forts to every core urban province in Atlantis \n§"
- ATL_UK_trade:0 "§gAllows decisions to divert British resource production \n§"
- 01_ATL_VLFP:0 "§gVastly increases the capacity of the carriers, at the cost of speed \n§"
- 01_ATL_light_bombers:0 "§gIncreases the range and air defense of the CAS aircraft \n§"
- 01_ATL_parasite:0 "§gSubstantially increases the air defense of strategic bombers, at the cost of some bombing capability \n§"
+ ATL_attack_itorkanak_tooltip:0 "§RStarts the event chain to destroy the Itorkanak. \n§!"
+ ATL_attack_kaprastiak_tooltip:0 "§RStarts the event chain to destroy the Kaprastiak. \n§!"
+ ATL_attack_all_tooltip:0 "§RWe are going to fight both criminal organizations. \n§!"
+ ATL_kapra_buddies:0 "§gEnds the Kaprastiak Hostilities. \n§!"
+ ATL_itork_buddies:0 "§gEnds the Itorkanak Hostilities. \n§!"
+ ATL_naitastarak_tooltip:0 "§RAllows decisions to suppress dissident thought. \n§!"
+ ATL_panatlantean_railroad:0 "§GAdd maximum infrastructure in all mainland states. \n§!"
+ ATL_air_reforms:0 "§4Allows decisions to remove the§! §ROutdated Air Force§! §4modifier. \n§!"
+ ATL_forts:0 "§LAdds 3 forts and 3 coastal forts to every core urban province in Atlantis. \n§!"
+ ATL_UK_trade:0 "§GAllows decisions to divert British resource production. \n§!"
+ 01_ATL_VLFP:0 "§4Vastly increases the capacity of the carriers, at the cost of speed. \n§!"
+ 01_ATL_light_bombers:0 "§4Increases the range and air defense of the CAS aircraft. \n§!"
+ 01_ATL_parasite:0 "§4Substantially increases the air defense of strategic bombers, at the cost of some bombing capability. \n§!"
+ 
+
+ 
  
  ATL_USA_espionage:0 "Expanded Spy Networks"
  ATL_kaprastiak_at_war:0 "War on the Kaprastiak"
