--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1911,6 +1911,21 @@
  NSW_neutrality_ADJ:0 "New Swabian"
  NSW_communism_ADJ:0 "New Swabian"
  NSW_monarchism_ADJ:0 "New Swabian"
+ ELY_fascism:0 "Eliseeland"
+ ELY_fascism_DEF:0 "Eliseeland"
+ ELY_democratic:0 "New Swabian Republic"
+ ELY_democratic_DEF:0 "the Republic of Eliseeland"
+ ELY_neutrality:0 "Eliseeland"
+ ELY_neutrality_DEF:0 "the Republic of Eliseeland"
+ ELY_monarchism:0 "Kingdom of Eliseeland"
+ ELY_monarchism_DEF:0 "the Kingdom of Eliseeland"
+ ELY_communism:0 "Peoples Republic of Eliseeland"
+ ELY_communism_DEF:0 "the Peoples Republic of Eliseeland"
+ ELY_fascism_ADJ:0 "Eliseelander"
+ ELY_democratic_ADJ:0 "Eliseelander"
+ ELY_neutrality_ADJ:0 "Eliseelander"
+ ELY_communism_ADJ:0 "Eliseelander"
+ ELY_monarchism_ADJ:0 "Eliseelander"
  RWN_fascism:0 "Rawaenganuipoan Empire"
  RWN_fascism_DEF:0 "the Rawaenganuipoan Empire"
  RWN_democratic:0 "Rawaenganuipo Republic"
