--- a/localisation/replace/aml_vanilla_state_names_l_english.yml
+++ b/localisation/replace/aml_vanilla_state_names_l_english.yml
@@ -10,6 +10,6 @@
  STATE_630:0 "Manukai Island" 
  STATE_696:0 "Vejontela"
  STATE_709:0 "Ahsan Islands"
- STATE_727:0 "Islárida"
+ STATE_727:0 "Knochentrocken"
  STATE_767:0 "Zerzura"
  STATE_516:0 "Tartaria"
