--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -43,6 +43,8 @@
  VICTORY_POINTS_16512:0 "Horr"
  VICTORY_POINTS_16514:0 "Galdama"
  VICTORY_POINTS_11830:0 "Providence"
+ VICTORY_POINTS_14414:0 "Vorsehungdorf"
+ VICTORY_POINTS_14422:0 "Stierhafen"
  #Balkanized Anatolia
  # Victory Points
  VICTORY_POINTS_11747:0 "Ancyra"
