--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -746,21 +746,21 @@
  MCF_neutrality_ADJ:0 "Mecafarian"
  MCF_communism_ADJ:0 "Mecafarian"
  MCF_monarchism_ADJ:0 "Mecafarian"
- SCP_fascism:0 "Scotia"
- SCP_fascism_DEF:0 "Scotia"
- SCP_democratic:0 "Republic of Scotia"
- SCP_democratic_DEF:0 "Republic of Scotia"
- SCP_neutrality:0 "Scotia"
- SCP_neutrality_DEF:0 "Scotia"
- SCP_monarchism:0 "Scotian Kingdom"
- SCP_monarchism_DEF:0 "the Scotian Kingdom"
- SCP_communism:0 "Peoples Republic of Scotia"
- SCP_communism_DEF:0 "the Peoples Republic of Scotia"
- SCP_fascism_ADJ:0 "Scotian"
- SCP_democratic_ADJ:0 "Scotian"
- SCP_neutrality_ADJ:0 "Scotian"
- SCP_communism_ADJ:0 "Scotian"
- SCP_monarchism_ADJ:0 "Scotian"
+ LTH_fascism:0 "Lothia"
+ LTH_fascism_DEF:0 "Lothia"
+ LTH_democratic:0 "Republic of Lothia"
+ LTH_democratic_DEF:0 "Republic of Lothia"
+ LTH_neutrality:0 "Lothia"
+ LTH_neutrality_DEF:0 "Lothia"
+ LTH_monarchism:0 "Lothian Kingdom"
+ LTH_monarchism_DEF:0 "the Lothian Kingdom"
+ LTH_communism:0 "Peoples Republic of Lothia"
+ LTH_communism_DEF:0 "the Peoples Republic of Lothia"
+ LTH_fascism_ADJ:0 "Lothian"
+ LTH_democratic_ADJ:0 "Lothian"
+ LTH_neutrality_ADJ:0 "Lothian"
+ LTH_communism_ADJ:0 "Lothian"
+ LTH_monarchism_ADJ:0 "Lothian"
  NFR_fascism:0 "New Frisia"
  NFR_fascism_DEF:0 "New Frisia"
  NFR_democratic:0 "Republic of New Frisia"
