--- a/localisation/aml_political_leaders_l_english.yml
+++ b/localisation/aml_political_leaders_l_english.yml
@@ -25,10 +25,10 @@
  MCF_naval_leader_3:1 "Amando Fonseca"
  MCF_naval_leader_4:1 "Teobaldo Aguiar"
  MCF_naval_leader_5:1 "Mateus Queiroz"
- SCP_socialism_leader:1 "Aiden McGregor"
- SCP_marxism_leader:1 "Bradley Robb"
- SCP_generic_fascism_leader:1 "Blake Irvine"
- SCP_oligarchism_leader:1 "Joshua McKie"
+ LTH_socialism_leader:1 "Aiden McGregor"
+ LTH_marxism_leader:1 "Bradley Robb"
+ LTH_generic_fascism_leader:1 "Blake Irvine"
+ LTH_oligarchism_leader:1 "Joshua McKie"
  NFR_marxism_leader:1 "Brian Bendtsen"
  NFR_generic_fascism_leader:1 "Henrik Vester"
  NFR_oligarchism_leader:1 "Gunnar Simonsen"
