Expanding US War Plans

--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -15,4 +15,24 @@
  MEX_focus_rio_grande_is_mexican_desc:0 "Despite what the Gringo aggressors may claim, Rio Grande is still a part of Mexico and always will be!"
  MEX_focus_reclaim_rio_grande:0 "Reclaim Rio Grande"
  MEX_focus_reclaim_rio_grande_desc:0 "The time is right for us to bring the rebellious Rio Grande states back into Mexico. It will cost blood and treasure, but we must re-establish the rightful borders of Mexico."
+ USA_war_plan_viridian:0 "War Plan Viridian"
+ USA_war_plan_viridian_desc:0 "We must secure our southern border to prevent the radicals of Central America infiltrating our nation."
+ USA_war_plan_cyan:0 "War Plan Cyan"
+ USA_war_plan_cyan_desc:0 "Atlantis has proven to be an unstable ally. They are in an unfortunate position to serve as a stepping stone for an invasion of our east coast."
+ USA_war_plan_sable:0 "War Plan Sable"
+ USA_war_plan_sable_desc:0 "The Free States of Mu has headed down a path with which we cannot agree. We must be prepared to help them change their minds, in any way necessary."
+ USA_intervention_in_mu:0 "Intervention in Mu"
+ USA_intervention_in_mu_desc:0 "Mu, the Farthest Continent, holds such importance because of its location between the Pacific and Austral Oceans. We cannot allow our enemies to control such a uniquely placed continent."
+ USA_war_plan_brown:0 "War Plan Brown"
+ USA_war_plan_brown_desc:0 "Mu is the beating heart of the continent. Their control over the central sea, their control over all of the travel corridors west of the Omarqa Mountains and their huge population all make for a need to control them in order to control the continent."
+ USA_war_plan_ochre:0 "War Plan Ochre"
+ USA_war_plan_ochre_desc:0 "Geq is an iron tough fortress of mountains and valleys which allows whoever controls the area to rain down destruction across much of the northwest of the continent. We cannot allow this area to remain in unfriendly hands."
+ USA_war_plan_khaki:0 "War Plan Khaki"
+ USA_war_plan_khaki_desc:0 "Vashparaq holds large reserves of metals that are necessary to our war fighting ability, as well as holding important high ground that enables raids deep into the jungles to the west. We must control these highlands."
+ USA_war_plan_violet:0 "War Plan Violet"
+ USA_war_plan_violet_desc:0 "The vast forests and jungles of Houpo'e contain so many of the resources our nation needs. How can we allow such disastrous mismanagement by the Houpo'eans? We should bring it under our control so that it can be properly developed."
+ USA_war_plan_lilac:0 "War Plan Lilac"
+ USA_war_plan_lilac_desc:0 "The Malihinian highlands provide a natural citadel for exerting control across the Northwest Muan Coast. Malihini is already heavily dependent on trade with our nation, why not bring those lands into the fold and be done with it?"
+ USA_war_plan_butter:0 "War Plan Butter"
+ USA_war_plan_butter_desc:0 "Thousands of small islands await our Marines. Without proper planning we will lose so many men to this Charybdis to Japan's Scylla. We must bring Trinsuyin under our control to protect one of the main arteries from the US West Coast into Southeast Asia."
  
