--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -577,9 +577,9 @@
  ATL_build_VLFP_dockyard:0 "VLFP Dockyard"
  ATL_build_VLFP_dockyard_desc:0 "The construction of the massive VLFPs requires an equally large dockyard. These floating airbases, wonders of steel, asphalt and aluminum, required special pylons be driven deep into the ocean floor to help with supporting the various pieces the VLFPs during construction."
  
- carrier_VLFP:0 "The Very Large Floating Platform"
+ carrier_VLFP:0 "Very Large Floating Platform"
  carrier_VLFP_desc:0 "Many nations have toyed with the idea of creating large carriers to bring air power into battle, but the Atlanteans surpasses them all by an order of magnitude. The VLFP, while quite slow and vulnerable to enemy submarine attacks, when backed with a support armada could bring almost an entire nation's worth of aircraft, including bombers, to the fight. This enormous tactical advantage was difficult to achieve technically but the psychological blow was considered well worth it by the Atlantean Armed Forces."
- ship_hull_carrier_vlfp:0 "VLFP TECH"
+ ship_hull_carrier_vlfp:0 "VLFP Carrier Hull"
  ship_hull_carrier_vlfp_desc:0 "Based initially on the floating farm platform that had by this point become common in the Atlantean Kolpo, the militarization of these floating islands required the addition of powerful engines and vast improvements to the substructure to support the wear and tear of active use."
  
  
